--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="itemHint">Enter here</string>
     <string name="amountHint">Enter amount</string>
     <string name="toastAdd">You must enter the amount!</string>
+    <string name="dialogAlertCashAccount">Choose the action you want to take:</string>
 </resources>
