--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="dialogAlertCashAccount">Choose the action you want to take:</string>
     <string name="cost">It costs:</string>
     <string name="left"> Left</string>
+    <string name="congratulations">Congratulations! You have reached your goal! </string>
 </resources>
