created new activity for adding and decrease money it jar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">MySecondProjectMoneyBox</string>
     <string name="saving">I`m saving money for:</string>
     <string name="itemHint">Enter your target here</string>
-    <string name="amountHint">Enter cost of your target here</string>
+    <string name="amountHint">Enter amount</string>
+    <string name="targetHint">Enter cost of your target here</string>
     <string name="toastAdd">You must enter the amount!</string>
     <string name="dialogAlertCashAccount">Choose the action you want to take:</string>
     <string name="cost">It costs:</string>
