deleted all useless things which new activity can replace in activity_main.xml. Added hint textview to add new goal. Added activity titles it strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="alertDialogNegativeButton">No</string>
     <string name="alertDialogTitleNewGoal">Create new target</string>
     <string name="alertDialogMessageNewGoal">Finish or reset the previous target first </string>
+    <string name="activityTitleNewGoal">Create new goal</string>
+    <string name="activityTitleAddMoney">Add/Subtract amount</string>
 </resources>
