--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,16 @@
 <resources>
-    <string name="app_name">MySecondProjectMoneyBox</string>
+    <string name="app_name">SimpleSave</string>
     <string name="saving">I`m saving money for:</string>
     <string name="itemHint">Enter your target here</string>
     <string name="amountHint">Enter amount</string>
     <string name="targetHint">Enter cost of your target here</string>
     <string name="toastAdd">You must enter the amount!</string>
-    <string name="dialogAlertCashAccount">Choose the action you want to take:</string>
     <string name="cost">It costs:</string>
     <string name="left"> Left</string>
     <string name="congratulations">Congratulations! You have reached your target! </string>
     <string name="mainActivityHint">Click on your character to see more information</string>
     <string name="alertDialogTitle">Reset</string>
-    <string name="alertDialogMessage">Reset your MoneyBox?</string>
+    <string name="alertDialogMessage">Reset your Money Box?</string>
     <string name="alertDialogPositiveButton">Yes</string>
     <string name="alertDialogNegativeButton">No</string>
     <string name="alertDialogTitleNewGoal">Create new target</string>
@@ -31,4 +30,5 @@
     <string name="characterNameMrKrabs">Mr. Krabs</string>
     <string name="characterNameScroogeMcDuck">Scrooge McDuck</string>
     <string name="toastNoCharacterChangeCharacterActivity">You must choose a character</string>
+    <string name="cancel">Cancel</string>
 </resources>
