--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,27 +1,28 @@
 <resources>
+
     <string name="app_name">SimpleSave</string>
     <string name="saving">I`m saving money for:</string>
-    <string name="itemHint">Enter your target here</string>
+    <string name="itemHint">Enter your goal</string>
     <string name="amountHint">Enter amount</string>
-    <string name="targetHint">Enter cost of your target here</string>
+    <string name="targetHint">Enter cost</string>
     <string name="toastAdd">You must enter the amount!</string>
     <string name="cost">It costs:</string>
-    <string name="left"> Left</string>
-    <string name="congratulations">Congratulations! You have reached your target! </string>
-    <string name="mainActivityHint">Click on your character to see more information</string>
+    <string name="left">Left</string>
+    <string name="congratulations">Congratulations! You have reached your goal!</string>
+    <string name="mainActivityHint">Click on character to see more information</string>
     <string name="alertDialogTitle">Reset</string>
-    <string name="alertDialogMessage">Reset your Money Box?</string>
+    <string name="alertDialogMessage">Reset your Piggy Bank?</string>
     <string name="alertDialogPositiveButton">Yes</string>
     <string name="alertDialogNegativeButton">No</string>
-    <string name="alertDialogTitleNewGoal">Create new target</string>
-    <string name="alertDialogMessageNewGoal">Finish or reset the previous target first </string>
+    <string name="alertDialogTitleNewGoal">Create new goal</string>
+    <string name="alertDialogMessageNewGoal">Finish or reset the previous goal first</string>
     <string name="activityTitleNewGoal">Create new goal</string>
     <string name="activityTitleAddMoney">Add/Subtract amount</string>
-    <string name="textHintToAddNewGoalTextView">Click here to create a goal </string>
-    <string name="toastNoInfoNewGoalActivity">You must enter the target and its price!</string>
-    <string name="toastNoTargetNewGoalActivity">You must enter the target!</string>
+    <string name="textHintToAddNewGoalTextView">Click here to create a goal</string>
+    <string name="toastNoInfoNewGoalActivity">You must enter the goal and its price!</string>
+    <string name="toastNoTargetNewGoalActivity">You must enter the goal!</string>
     <string name="toastNoCostNewGoalActivity">You must enter the cost!</string>
-    <string name="toastOnCharacterClick">Create a target first!</string>
+    <string name="toastOnCharacterClick">Create a goal first!</string>
     <string name="activityTitleChangeCharacter">Settings</string>
     <string name="titleChangeCharacter">Change character</string>
     <string name="checkBoxTextEnableVibrationChangeCharacter">Enable vibration</string>
