in progress to add 3 more goals feature

--- a/app/src/main/res/values-uk-rUA/strings.xml
+++ b/app/src/main/res/values-uk-rUA/strings.xml
@@ -31,4 +31,5 @@
     <string name="characterNameScroogeMcDuck">Scrooge McDuck</string>
     <string name="toastNoCharacterChangeCharacterActivity">Ви повинні вибрати персонажа </string>
     <string name="cancel">Cкасування </string>
+    <string name="characterNameGriff">Griff</string>
 </resources>
