--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="alertDialogMessageNewGoal">Finish or reset the previous goal first</string>
     <string name="activityTitleNewGoal">Create new goal</string>
     <string name="activityTitleAddMoney">Add/Subtract amount</string>
+    <string name="activityTitleGoalsList">Goals List</string>
     <string name="textHintToAddNewGoalTextView">Click here to create a goal</string>
     <string name="toastNoInfoNewGoalActivity">You must enter the goal and its price!</string>
     <string name="toastNoTargetNewGoalActivity">You must enter the goal!</string>
