--- a/app/src/main/res/values-be-rBY/strings.xml
+++ b/app/src/main/res/values-be-rBY/strings.xml
@@ -32,4 +32,12 @@
     <string name="characterNameScroogeMcDuck">Скурдж Макдак</string>
     <string name="toastNoCharacterChangeCharacterActivity">Вы павінны выбраць персанажа</string>
     <string name="cancel">Адмена</string>
+    <string name="activityTitleGoalsList">Спіс мэтаў</string>
+    <string name="characterNameHomerSimpson">Гомер Симпсон</string>
+    <string name="characterNamePeterGriffin">Питер Гриффин</string>
+    <string name="firstbuttongoalslist">Першая мэта</string>
+    <string name="secondbuttongoalslist">Другая мэта</string>
+    <string name="thirdbuttongoalslist">Трэцяя мэта</string>
+    <string name="progressBarText">ужо назапашана</string>
+    <string name="alreadyFinished">Скончана!</string>
 </resources>
