--- a/app/src/main/res/values-ru-rKG/strings.xml
+++ b/app/src/main/res/values-ru-rKG/strings.xml
@@ -32,4 +32,12 @@
     <string name="characterNameScroogeMcDuck">Скурдж Макдак</string>
     <string name="toastNoCharacterChangeCharacterActivity">Вы должны выбрать персонажа</string>
     <string name="cancel">Отмена</string>
+    <string name="activityTitleGoalsList">Список целей</string>
+    <string name="characterNameHomerSimpson">Гомер Симпсон</string>
+    <string name="characterNamePeterGriffin">Питер Гриффин</string>
+    <string name="firstbuttongoalslist">Первая цель</string>
+    <string name="secondbuttongoalslist">Вторая цель</string>
+    <string name="thirdbuttongoalslist">Третья цель</string>
+    <string name="progressBarText">накоплено</string>
+    <string name="alreadyFinished">Закончено!</string>
 </resources>
