--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,13 @@
     <string name="characterNameGriff">Griff</string>
     <string name="characterNameMrKrabs">Mr. Krabs</string>
     <string name="characterNameScroogeMcDuck">Scrooge McDuck</string>
+    <string name="characterNameHomerSimpson">Homer Simpson</string>
+    <string name="characterNamePeterGriffin">Peter Griffin</string>
     <string name="toastNoCharacterChangeCharacterActivity">You must choose a character</string>
     <string name="cancel">Cancel</string>
+    <string name="firstbuttongoalslist">First goal</string>
+    <string name="secondbuttongoalslist">Second goal</string>
+    <string name="thirdbuttongoalslist">Third goal</string>
+    <string name="progressBarText">already saved</string>
+    <string name="alreadyFinished">Finished!</string>
 </resources>
