--- a/app/src/main/res/values-uk-rUA/strings.xml
+++ b/app/src/main/res/values-uk-rUA/strings.xml
@@ -38,4 +38,5 @@
     <string name="thirdbuttongoalslist">Третя мета</string>
     <string name="progressBarText">вже накопичено</string>
     <string name="alreadyFinished">Закінчено!</string>
+    <string name="ok">Ок</string>
 </resources>
