--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -38,4 +38,5 @@
     <string name="thirdbuttongoalslist">Troisième objectif</string>
     <string name="progressBarText">déjà accumulés</string>
     <string name="alreadyFinished">Terminé!</string>
+    <string name="ok">Ok</string>
 </resources>
