--- a/app/src/main/res/values-ru-rKZ/strings.xml
+++ b/app/src/main/res/values-ru-rKZ/strings.xml
@@ -38,4 +38,5 @@
     <string name="thirdbuttongoalslist">Третья цель</string>
     <string name="progressBarText">накоплено</string>
     <string name="alreadyFinished">Закончено!</string>
+    <string name="ok">Ок</string>
 </resources>
