--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="thirdbuttongoalslist">Third goal</string>
     <string name="progressBarText">already saved</string>
     <string name="alreadyFinished">Finished!</string>
+    <string name="ok">Ok</string>
 </resources>
