--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -39,4 +39,6 @@
     <string name="progressBarText">déjà accumulés</string>
     <string name="alreadyFinished">Terminé!</string>
     <string name="ok">Ok</string>
+    <string name="add">Ajouter</string>
+    <string name="remove">Soustraire</string>
 </resources>
