--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,6 @@
     <string name="progressBarText">already saved</string>
     <string name="alreadyFinished">Finished!</string>
     <string name="ok">Ok</string>
+    <string name="add">Add</string>
+    <string name="remove">Remove</string>
 </resources>
