--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -24,7 +24,6 @@
     <string name="toastNoCostNewGoalActivity">Vous devez entrer le coût!</string>
     <string name="toastOnCharacterClick">Créez d\'abord un objectif!</string>
     <string name="activityTitleChangeCharacter">Réglages</string>
-    <string name="titleChangeCharacter">Changement de caractère</string>
     <string name="checkBoxTextEnableVibrationChangeCharacter">Activer les vibrations</string>
     <string name="checkBoxTextEnableSoundChangeCharacter">Activer le son</string>
     <string name="characterNameGriff">Griff</string>
@@ -41,4 +40,5 @@
     <string name="ok">Ok</string>
     <string name="add">Ajouter</string>
     <string name="remove">Soustraire</string>
+    <string name="titleSettings">Réglages</string>
 </resources>
