fixed bugs and crashes

--- a/app/src/main/res/values-be-rBY/strings.xml
+++ b/app/src/main/res/values-be-rBY/strings.xml
@@ -41,4 +41,5 @@
     <string name="ok">Ок</string>
     <string name="add">Дадаць</string>
     <string name="remove">Зменшыць</string>
+    <string name="activityHintGoals">Мэты</string>
 </resources>
