--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -41,4 +41,5 @@
     <string name="add">Ajouter</string>
     <string name="remove">Soustraire</string>
     <string name="titleSettings">Réglages</string>
+    <string name="activityHintGoals">Buts</string>
 </resources>
