--- a/app/src/main/res/values-ru-rKG/strings.xml
+++ b/app/src/main/res/values-ru-rKG/strings.xml
@@ -41,4 +41,5 @@
     <string name="ok">Ок</string>
     <string name="add">Добавить</string>
     <string name="remove">Убавить</string>
+    <string name="activityHintGoals">Цели</string>
 </resources>
