--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
-
     <string name="app_name">SimpleSave</string>
     <string name="saving">I`m saving money for:</string>
     <string name="itemHint">Enter your goal</string>
@@ -19,6 +18,7 @@
     <string name="activityTitleNewGoal">Create new goal</string>
     <string name="activityTitleAddMoney">Change amount</string>
     <string name="activityTitleGoalsList">Goals List</string>
+    <string name="activityHintGoals">Goals</string>
     <string name="textHintToAddNewGoalTextView">Click here to create a goal</string>
     <string name="toastNoInfoNewGoalActivity">You must enter the goal and its price!</string>
     <string name="toastNoTargetNewGoalActivity">You must enter the goal!</string>
