added new character booba

--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -34,4 +34,5 @@
     <string name="remove">Soustraire</string>
     <string name="titleSettings">Réglages</string>
     <string name="activityHintGoals">Buts</string>
+    <string name="characterNameBooba">Booba</string>
 </resources>
