--- a/app/src/main/res/values-uk-rUA/strings.xml
+++ b/app/src/main/res/values-uk-rUA/strings.xml
@@ -34,4 +34,5 @@
     <string name="add">Додати</string>
     <string name="remove">Зменшити</string>
     <string name="activityHintGoals">Цілі</string>
+    <string name="characterNameBooba">Буба</string>
 </resources>
