--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="characterNameGriff">Griff</string>
     <string name="characterNameMrKrabs">Mr. Krabs</string>
     <string name="characterNameScroogeMcDuck">Scrooge McDuck</string>
+    <string name="characterNameBooba">Booba</string>
     <string name="cancel">Cancel</string>
     <string name="ok">Ok</string>
     <string name="add">Add</string>
