--- a/app/src/main/res/values-be-rBY/strings.xml
+++ b/app/src/main/res/values-be-rBY/strings.xml
@@ -34,4 +34,5 @@
     <string name="add">Дадаць</string>
     <string name="remove">Зменшыць</string>
     <string name="activityHintGoals">Мэты</string>
+    <string name="characterNameBooba">Буба</string>
 </resources>
