--- a/app/src/main/res/values-ru-rKG/strings.xml
+++ b/app/src/main/res/values-ru-rKG/strings.xml
@@ -34,4 +34,5 @@
     <string name="add">Добавить</string>
     <string name="remove">Убавить</string>
     <string name="activityHintGoals">Цели</string>
+    <string name="characterNameBooba">Буба</string>
 </resources>
